k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cruzible
  labels:
    app.kubernetes.io/name: cruzible
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
